2006-03-20  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/applet/GNOME_SeahorseApplet.server.in.in: 
    Use appropriate icon for the panel applet 
    
2006-03-20  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-daemon.c:
    * daemon/seahorse-daemon.h:
    * daemon/seahorse-sharing.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * pixmaps/Makefile.am:
    * pixmaps/*.xcf (removed):
    * pixmaps/*.png (removed):
    * pixmaps/22x22/Makefile.am:
    * pixmaps/22x22/*.png (added):
    * pixmaps/22x22/*.svg (added):
    * pixmaps/48x48/Makefile.am:
    * pixmaps/48x48/*.png (added):
    * pixmaps/scaleable/Makefile.am:
    * pixmaps/scaleable/*.svg:
    * plugins/applet/seahorse-applet.c:
    * src/seahorse-ssh-upload.c:
    * configure.in: Add Tango style icons. 
    
2006-03-20  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-sign.c: Fix build warnings
    
2006-03-18  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Fix dependency problem for avahi-client
    Patch from Joseph Sacco. Fixes bug #335039

2006-03-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h:
    * pixmaps/Makefile.am:
    * pixmaps/seahorse-sign.svg:
    * src/seahorse-key-dialogs.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-widget.c:
    * src/seahorse-sign.c:
    * src/seahorse-sign.glade:
    * src/seahorse-windows.h: New user interface for signing keys
    
2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs.c: Only show keys that can sign in prefs
    