@@ -917,7 +917,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label97">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;b&gt;You have not signed this key.&lt;/b&gt;</property>
+				  <property name="label" translatable="yes">&lt;b&gt;This key is not trusted by you.&lt;/b&gt;</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1354,7 +1354,7 @@
 				    <widget class="GtkLabel" id="label22223">
 				      <property name="width_request">270</property>
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">This key is believed to belong to the correct person by people you trust.  If you have verified this key belongs to who it says it does, &lt;i&gt;sign&lt;/i&gt; this key:</property>
+				      <property name="label" translatable="yes">To indicate your trust of this key to others, &lt;i&gt;sign&lt;/i&gt; this key:</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">True</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1516,7 +1516,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label119">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;b&gt;You do not trust this person's signatures on other keys&lt;/b&gt;</property>
+				  <property name="label" translatable="yes">&lt;b&gt;This key is not trusted by you.&lt;/b&gt;</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1553,7 +1553,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label122">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Indicate how well you trust their signature on the &lt;i&gt;Details&lt;/i&gt; tab.</property>
+                      <property name="label" translatable="yes">Its trust is manually specified on the &lt;i&gt;Details&lt;/i&gt; tab.</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">True</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2266,7 +2266,7 @@ B4C3 4349 0932 7854 3452</property>
 					  <child>
 					    <widget class="GtkLabel" id="label112">
 					      <property name="visible">True</property>
-					      <property name="label" translatable="yes">You trust their signature:</property>
+					      <property name="label" translatable="yes">You _Trust the Owner:</property>
 					      <property name="use_underline">True</property>
 					      <property name="use_markup">False</property>
 					      <property name="justify">GTK_JUSTIFY_LEFT</property>
