@@ -1,5 +1,14 @@
 2006-03-20  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-gtkstock.c:
+    * libseahorse/seahorse-gtkstock.h:
+    * src/seahorse-key-properties.c:
+    * src/seahorse-pgp-public-key-properties.c: Hide signatures tab when 
+    no signatures. Back out some changes from #329151. Display proper
+    signature icons. 
+    
+2006-03-20  Nate Nielsen  <nielsen@memberwebs.com>
+
     * plugins/applet/GNOME_SeahorseApplet.server.in.in: 
     Use appropriate icon for the panel applet 
     
